--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.14.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14"
+  },
+  "devDependencies": {
+    "tw-animate-css": "^1.4.0"
   }
 }
