--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "astro": "^5.14.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14"
   },
